@@ -39,6 +39,9 @@ import accessionlib
 import mgi_utils
 import loadlib
 
+db.setAutoTranslate(False)
+db.setAutoTranslateBE(False)
+
 #globals
 
 taxId = os.environ['TAXID']
