@@ -36,6 +36,9 @@ import db
 import mgi_utils
 import loadlib
 
+db.setAutoTranslate(False)
+db.setAutoTranslateBE(False)
+
 #globals
 
 taxId = os.environ['TAXID']
