@@ -1,3 +1,10 @@
+TAG: entrezgeneload-6-0-4-1
+DATE: 04/27/2016
+STAFF: lec 
+CHANGES: TR12069/postgres cleanup
+1) convert to Git 
+2) add "db.setAutoTranslate"
+
 TAG: entrezgeneload-6-0-0-4
 DATE: 08/31/2015
 STAFF: lec
